# learnCpp-dataVisualizatorApp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
data/: data.json  dataset1.csv
data/test/: test-dataset.csv  test-dataset.json
docs/: Doxyfile
docs/html/: annotated.html  classCSV-members.html  classCSV.html  classDataReaderSocket.html  classFile-members.html  classFile.html  classJSON-members.html  classJSON.html  classSocket-members.html  classSocket.html  classes.html  csv_8cpp.html  csv_8cpp__incl.map  csv_8cpp__incl.md5  csv_8hpp.html  csv_8hpp__dep__incl.map  csv_8hpp__dep__incl.md5  csv_8hpp__incl.map  csv_8hpp__incl.md5  csv_8hpp_source.html  dir_000000_000001.html  dir_000000_000004.html  dir_4adadf31cdb50dac910682cc710ae69f.html  dir_545a7a07700597e7dfb05afb48ab9cc6.html  dir_66a975a8f97dc380b915c32e94ea8452.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_70ca440aa3c420e9252688167882087e.html  dir_87c9c2d101a7a65a7ad4adfe73a749d9.html  dir_f8bf9e8be3e668f383855453dd9f9721.html  file_8cpp.html  file_8cpp__incl.map  file_8cpp__incl.md5  file_8hpp.html  file_8hpp__dep__incl.map  file_8hpp__dep__incl.md5  file_8hpp__incl.map  file_8hpp__incl.md5  file_8hpp_source.html  (+20 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classCSV.tex  classDataReaderSocket.tex  classFile.tex  classJSON.tex  classSocket.tex  csv_8cpp.tex  csv_8cpp__incl.md5  csv_8hpp.tex  csv_8hpp__dep__incl.md5  csv_8hpp__incl.md5  file_8cpp.tex  file_8cpp__incl.md5  file_8hpp.tex  file_8hpp__dep__incl.md5  file_8hpp__incl.md5  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  socket_8cpp.tex  socket_8cpp__incl.md5  socket_8hpp.tex  socket_8hpp__dep__incl.md5  socket_8hpp__incl.md5
scripts/: build.sh  clear.sh  cmake.sh  doxygen.sh  make.sh
src/: CMakeLists.txt  main.cpp
src/JSONparser/: CMakeLists.txt  JSONparser.cpp  JSONparser.hpp
src/dataObject/: CMakeLists.txt  dataObject.cpp  dataObject.hpp
src/dataParser/: CMakeLists.txt
src/dataParser/csv/: CMakeLists.txt  csv.cpp  csv.hpp
src/dataParser/json/: CMakeLists.txt  json.hpp
src/dataReader/: CMakeLists.txt  dataReader.hpp  dataReaderFile.cpp
src/dataReader/file/: CMakeLists.txt  file.cpp  file.hpp
src/dataReader/socket/: CMakeLists.txt  socket.cpp  socket.hpp
test/: CMakeLists.txt  test.cpp
